<resources>
    <string name="app_name">M8_UF2_PROJECTE_FIREBASE_JXX_WRK</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_to_login">Click here to Login</string>
    <string name="click_to_register">Click here to Sign Up</string>
    <string name="log_out">Log Out</string>
</resources>